--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Hi, I am <strong>Franco Araya Leiva</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Fullstack Developer</p>
-        <img src="" alt="Otra imagen mía, sonriendo">
+        <img src="img/Franco2.jpeg" alt="Otra imagen mía, sonriendo">
         <!-- Tengo que tener más fotografías para terminar mi portfolio. -->
     </section>
 
