Nueva introducción y comentarios

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </h1>
         <p class="section__subtitle section__subtitle--intro">Fullstack Developer</p>
         <img src="img/Franco2.jpeg" alt="Otra imagen mía, sonriendo">
-        <!-- Tengo que tener más fotografías para terminar mi portfolio. -->
+        <!-- Tengo que tener más fotografías mías, pero ya las subí, para terminar mi portfolio. -->
     </section>
 
     <!-- Mis servicios -->
