Actualización a 'What I Do'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/Franco1.jpeg" alt="Imagen personal">
+            <!-- <img src="img/Franco1.jpeg" alt="Imagen personal"> -->
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburguer"></span>
@@ -37,7 +37,7 @@
             Hi, I am <strong>Franco Araya Leiva</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Fullstack Developer</p>
-        <img src="img/Franco2.jpeg" alt="Otra imagen mía, sonriendo">
+        <img src="img/Franco2.jpeg" alt="Otra imagen mía, sonriendo" class="intro__img">
         <!-- Tengo que tener más fotografías mías, pero ya las subí, para terminar mi portfolio. -->
     </section>
 
