Who I am, actualización

--- a/index.html
+++ b/index.html
@@ -74,15 +74,18 @@
 
     <!-- Acerca de mi -->
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am?</h2>
+        <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">Fullstack Developer from Chile!</p>
 
         <div class="about-me__body">
-            <p></p>
-            <p></p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio id, consectetur nisi, vel labore
+                repudiandae, error nobis recusandae ab reiciendis quae? Quae quod molestiae eum obcaecati nulla veniam
+                vero! Assumenda.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, obcaecati. Sint laudantium aliquam error
+                earum unde atque eum, impedit officiis.</p>
         </div>
 
-        <img src="" alt="Imagen de Franco">
+        <img src="/img/Franco3.jpeg" alt="Imagen de Franco" class="about-me__img">
         <!-- Necesito más fotos mías para un proyecto como este -->
     </section>
 
