--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header>
         <div class="logo">
-            <!-- <img src="img/Franco1.jpeg" alt="Imagen personal"> -->
+            <!-- <img src="/Portfolio/img/doom.png" alt="Imagen personal"> -->
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburguer"></span>
+            <span class="hamburger"></span>
         </button>
         <nav class="nav">
             <ul class="nav__list">
@@ -85,34 +85,34 @@
                 earum unde atque eum, impedit officiis.</p>
         </div>
 
-        <img src="/img/Franco3.jpeg" alt="Imagen de Franco" class="about-me__img">
+        <img src="/Portfolio/img/Franco3.jpeg" alt="Imagen de Franco" class="about-me__img">
         <!-- Necesito más fotos mías para un proyecto como este -->
     </section>
 
     <!-- Mi trabajo o lo que hago -->
     <section class="my-work" id="work">
-        <h2 class="section__title">My work</h2>
-        <p class="section__subtitle"></p>
+        <h2 class="section__title section__title--work">My work</h2>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
         <div class="portfolio">
             <!-- Porfolio items -->
             <a href="#" class="portfolio__img">
-                <img src="" alt="">
+                <img src="/Portfolio/img/Franco1.jpeg" alt="">
             </a>
 
             <!-- Porfolio items -->
             <a href="#" class="portfolio__img">
-                <img src="" alt="">
+                <img src="/Portfolio/img/Franco2.jpeg" alt="">
             </a>
 
             <!-- Porfolio items -->
             <a href="#" class="portfolio__img">
-                <img src="" alt="">
+                <img src="/Portfolio/img/Franco4.jpeg" alt="">
             </a>
 
             <!-- Porfolio items -->
             <a href="#" class="portfolio__img">
-                <img src="" alt="">
+                <img src="/Portfolio/img/Franco5.jpeg" alt="">
             </a>
 
         </div>
@@ -120,13 +120,28 @@
     </section>
 
     <!-- Pie de página o Footer-->
-    <footer>
+    <footer class="footer">
         <a href="mailto:franco.arayaleiva@gmail.com" class="footer__link">franco.arayaleiva@gmail.com</a>
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link">a</a></li>
-            <li class="social-list__item"><a class="social-list__link">b</a></li>
-            <li class="social-list__item"><a class="social-list__link">c</a></li>
-            <li class="social-list__item"><a class="social-list__link">d</a></li>
+            <li class="social-list__item">
+                <a class="social-list__link">
+                    <i class="fa-brands fa-github"></i></a>
+            </li>
+
+            <li class="social-list__item">
+                <a class="social-list__link">
+                    <i class="fa-brands fa-linkedin"></i></a>
+            </li>
+
+            <li class="social-list__item">
+                <a class="social-list__link">
+                    <i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+
+            <li class="social-list__item">
+                <a class="social-list__link">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
 
