Se agrega JS, actualizar CSS y se crea nuevo html para futuros proyectos.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevFranco Portfolio Website</title>
+    <title>DevFranco Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -96,7 +96,7 @@
 
         <div class="portfolio">
             <!-- Porfolio items -->
-            <a href="#" class="portfolio__img">
+            <a href="portfolio-item.html" class="portfolio__img">
                 <img src="/Portfolio/img/Franco1.jpeg" alt="">
             </a>
 
@@ -144,7 +144,7 @@
             </li>
         </ul>
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
